@@ -6,7 +6,11 @@ import com.datastax.spark.connector.cql.CassandraConnector;
 import com.datastax.spark.connector.writer.RowWriterFactory;
 import com.datastax.spark.connector.writer.WriteConf;
 import org.apache.spark.SparkConf;
+import org.apache.spark.api.java.JavaPairRDD;
+import org.apache.spark.api.java.function.Function;
+import org.apache.spark.api.java.function.Function2;
 import org.apache.spark.rdd.RDD;
+import scala.Tuple2;
 
 /**
  * A Java API wrapper over {@link org.apache.spark.rdd.RDD} to provide Spark Cassandra Connector functionality.
@@ -40,4 +44,7 @@ public class RDDJavaFunctions<T> extends RDDAndDStreamCommonJavaFunctions<T> {
         rddf.saveToCassandra(keyspace, table, columnNames, conf, connector, rowWriterFactory);
     }
 
+    // TODO: Add spanBy. To do this we need to first refactor RDDJavaFunctions (probably translate to Scala),
+    // because currently ClassTag information is missing and we can't call RDD#map here nor construct a
+    // Scala lambda to pass to Scala API.
 }
