@@ -1,9 +1,12 @@
 package com.datastax.spark.connector
 
 import com.datastax.spark.connector.cql.CassandraConnector
+import com.datastax.spark.connector.rdd.SpannedRDD
 import com.datastax.spark.connector.writer._
 import org.apache.spark.SparkContext
 import org.apache.spark.rdd.RDD
+
+import scala.reflect.ClassTag
 
 /** Provides Cassandra-specific methods on `RDD` */
 class RDDFunctions[T](rdd: RDD[T]) extends WritableToCassandra[T] with Serializable {
@@ -23,4 +26,12 @@ class RDDFunctions[T](rdd: RDD[T]) extends WritableToCassandra[T] with Serializa
     val writer = TableWriter(connector, keyspaceName, tableName, columns, writeConf)
     rdd.sparkContext.runJob(rdd, writer.write _)
   }
+
+  /** Applies a function to each item, and groups consecutive items having the same value together.
+    * Contrary to `groupBy`, items from the same group must be already next to each other in the
+    * original collection. Works locally on each partition, so items from different
+    * partitions will never be placed in the same group.*/
+  def spanBy[U](f: (T) => U): RDD[(U, Iterable[T])] =
+    new SpannedRDD[U, T](rdd, f)
+
 }
