@@ -2,9 +2,10 @@
  * Added support for TTL and timestamp in the writer (#153)
  * Added support for UDT column types (SPARKC-1)
  * Upgraded Spark to version 1.2.0 (SPARKC-15)
- * Upgraded Spark to the latest release version, 1.1.1 (#461)
  * For 1.2.0 release, table name with dot is not supported for Spark SQL,
    it will be fixed in the next release
+ * Added fast spanBy and spanByKey methods to RDDs useful for grouping Cassandra
+   data by partition key / clustering columns. Useful for e.g. time-series data. (SPARKC-2)
 
 1.1.1
  * Fixed NoSuchElementException in SparkSQL predicate pushdown code (SPARKC-7, #454)
